tests/baselines/reference/parserFunctionDeclaration2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2.ts (1 errors) ====
    declare function Foo() {
                           ~
!!! error TS1037: A function implementation cannot be declared in an ambient context.
    }